just some wording in certain view files

--- a/module/Stock/view/stock/stock/index.phtml
+++ b/module/Stock/view/stock/stock/index.phtml
@@ -7,8 +7,8 @@
 
 <table class="table">
 <tr>
-    <th>Name</th>
-    <th>Teacher</th>
+    <th>Symbol</th>
+    <th>Action</th>
     <th>&nbsp;</th>
 </tr>
 <?php foreach ($stocks as $stock) : ?>
