--- a/module/Stock/view/stock/stock/home.phtml
+++ b/module/Stock/view/stock/stock/home.phtml
@@ -3,8 +3,8 @@
 <br/>
 
 <ul>
-	<li><a href="/album">Album tutorial (mysql)</a></li>
-	<li><a href="/stock/index">Stocks list (mongo db)</a></li>
+	<li><a href="/album">Album tutorial (mysql driven)</a></li>
+	<li><a href="/stock/index">Stocks list (mongo db driven)</a></li>
 	<li><a href="/stock/easeljs">EaselJs (html 5 canvas)</a></li>
 </ul>
 
