--- a/module/Stock/view/stock/stock/easeljs.phtml
+++ b/module/Stock/view/stock/stock/easeljs.phtml
@@ -10,9 +10,9 @@
 	var prices = new Array();
 
 	<?php
-		$k = 0;
+		/*$k = 0;
 		while ($price = $prices->getNext()):
-	?>
+
 
 		prices[<?php echo $k; ?>] = new Object();
 		prices[<?php echo $k; ?>]['date'] = '<?php echo $price->getDate(); ?>';
@@ -21,12 +21,12 @@
 		prices[<?php echo $k; ?>]['low'] = <?php echo $price->getLow(); ?>;
 		prices[<?php echo $k; ?>]['close'] = <?php echo $price->getClose(); ?>;
 
-	<?php
+
 			$k++;
-		endwhile;
+		endwhile;*/
 	?>
 
-	/*prices[0] = new Object();
+	prices[0] = new Object();
 	prices[0]['date'] = '2013-05-29';
 	prices[0]['open'] = 75.00;
 	prices[0]['high'] = 110.00;
@@ -66,7 +66,7 @@
 	prices[5]['open'] = 80.00;
 	prices[5]['high'] = 95.00;
 	prices[5]['low'] = 65.00;
-	prices[5]['close'] = 90.00;*/
+	prices[5]['close'] = 90.00;
 
 	init(prices);
 </script>
