added adding of stocks

--- a/module/Stock/view/stock/stock/index.phtml
+++ b/module/Stock/view/stock/stock/index.phtml
@@ -2,7 +2,7 @@
 
 <p>
     <!--<a href="<?php echo $this->url('stock', array('action'=>'add'));?>">Add a new stock</a>-->
-	<a href="#">Add a new stock</a>
+	<a href="/stock/add">Add a new stock</a>
 </p>
 
 <table class="table">
