--- a/module/Stock/view/stock/stock/index.phtml
+++ b/module/Stock/view/stock/stock/index.phtml
@@ -16,9 +16,7 @@
 <tr>
     <td><?php echo $this->escapeHtml($stock->symbol);?></td>
     <td>
-        <!--<a href="<?php echo $this->url('stock', array('action'=>'edit', 'id' => $stock->id));?>">Edit</a>
-        -->
-		<a href="#">Edit</a>
+		<a href="<?php echo $this->url('stock', array('action'=>'edit', 'id' => $stock->id));?>">Edit</a>
         <a href="<?php echo $this->url('stock', array('action'=>'delete', 'id' => $stock->id));?>">Delete</a>
     </td>
 </tr>
