--- a/module/Stock/view/stock/stock/index.phtml
+++ b/module/Stock/view/stock/stock/index.phtml
@@ -16,7 +16,9 @@
 <tr>
     <td><?php echo $this->escapeHtml($stock->symbol);?></td>
     <td>
-		<a href="<?php echo $this->url('stock', array('action'=>'edit', 'id' => $stock->id));?>">Edit</a>
+		<a href="<?php echo $this->url('stock', array('action'=>'edit', 'id' => $stock->id));?>">Edit</a> |
+		<a href="http://de.finance.yahoo.com/q?s=<?php echo $stock->getSymbol(); ?>" target="_blank">View yahoo details</a> |
+		<a href="<?php echo $this->url('stock', array('action'=>'getHistoricalPricesOfStock', 'id' => $stock->id));?>">Get historical prices from yahoo</a> |
         <a href="<?php echo $this->url('stock', array('action'=>'delete', 'id' => $stock->id));?>">Delete</a>
     </td>
 </tr>
