--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -9,9 +9,9 @@
 
         <!-- Le styles -->
         <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
-                        ->prependStylesheet($this->basePath() . '/css/bootstrap-responsive.min.css')
-                        ->prependStylesheet($this->basePath() . '/css/style.css')
-                        ->prependStylesheet($this->basePath() . '/css/bootstrap.min.css') ?>
+							->prependStylesheet($this->basePath() . '/css/style.css')
+							->prependStylesheet($this->basePath() . '/css/bootstrap-responsive.min.css')
+							->prependStylesheet($this->basePath() . '/css/bootstrap.min.css') ?>
 
         <!-- Scripts -->
         <?php echo $this->headScript()->prependFile($this->basePath() . '/js/html5.js', 'text/javascript', array('conditional' => 'lt IE 9',))
@@ -20,7 +20,10 @@
 
     </head>
     <body>
-        <div class="navbar navbar-inverse navbar-fixed-top">
+		<div id="topNavigation">
+			<a href="/">Home</a> | <a href="/stock">Stocks</a> | Top-Navigation
+		</div>
+        <!--<div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
                     <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -33,15 +36,12 @@
                         <ul class="nav">
                             <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
                         </ul>
-                    </div><!--/.nav-collapse -->
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
+        </div>-->
+        <div id="fabianContainer">
             <?php echo $this->content; ?>
-            <hr>
-            <footer>
-            </footer>
         </div> <!-- /container -->
         <?php echo $this->inlineScript() ?>
     </body>
