--- a/module/Stock/view/stock/stock/easeljs.phtml
+++ b/module/Stock/view/stock/stock/easeljs.phtml
@@ -1,6 +1,12 @@
-<canvas id="demoCanvas" width="1000" height="600" style="border:1px solid black;">
+<canvas id="demoCanvas">
 	Das ist ein Test.
 </canvas>
+<script>
+	// set size of canvas element
+	$("#fabianContainer").css('height', $("#fabianContainer").width() / 2);
+	$("#demoCanvas").attr('width', $("#fabianContainer").width());
+	$("#demoCanvas").attr('height', $("#fabianContainer").height());
+</script>
 
 <script src="/js/EaselJS-release_v0.6.1/lib/easeljs-0.6.1.min.js"></script>
 <script src="/js/charts/CandleStickContainer.js"></script>
@@ -8,6 +14,8 @@
 
 <script>
 	var prices = new Array();
+
+
 
 	<?php
 		$k = 0;
