--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
 body {
-    padding-top: 60px;
-    padding-bottom: 40px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+	padding-left: 0px;
+    padding-right: 0px;
 }
 
 .zf-green {
@@ -34,4 +36,54 @@ div.container a.brand {
     background: url("../img/zf2-logo.png") no-repeat scroll 0 10px transparent;
     margin-left: 0;
     padding: 8px 20px 12px 40px;
+}
+
+#topNavigation {
+	background-color: #ddd;
+	padding: 10px;
+}
+
+#fabianContainer {
+	width: 98%;
+	height: 400px;
+	padding: 10px;
+}
+
+#demoCanvas {
+	width: 100%;
+	height: 100%;
+	display: block;
+	border: 1px solid black;
+}
+
+/* Desktop large
+------------------------- */
+@media (min-width: 1200px) {
+	#fabianContainer {
+		width: 1000px;
+		height: 400px;
+		padding: 10px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+
+/* Desktop
+------------------------- */
+@media (max-width: 980px) {
+}
+
+/* Tablet to desktop
+------------------------- */
+@media (min-width: 768px) and (max-width: 979px) {
+}
+
+/* Tablet
+------------------------- */
+@media (max-width: 767px) {
+}
+
+/* Landscape phones
+------------------------- */
+@media (max-width: 480px) {
 }
