--- a/module/Stock/view/stock/stock/easeljs.phtml
+++ b/module/Stock/view/stock/stock/easeljs.phtml
@@ -13,9 +13,10 @@
 <script src="/js/charts/init.js"></script>
 
 <script>
+	var stock = new Object();
+	stock.symbol = '<?php echo $stock->getSymbol(); ?>';
+
 	var prices = new Array();
-
-
 
 	<?php
 		$k = 0;
@@ -76,5 +77,5 @@
 	prices[5]['low'] = 65.00;
 	prices[5]['close'] = 90.00;*/
 
-	init(prices);
+	init(stock, prices);
 </script>
