modified html content and css

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -21,7 +21,7 @@
     </head>
     <body>
 		<div id="topNavigation">
-			<a href="/">Home</a> | <a href="/stock">Stocks</a> | Top-Navigation
+			<a href="/">Home</a> | <a href="/stock">Stocks (mongodb)</a> | <a href="/album">Album tutorial (mysql)</a> | <a href="/stock/contact">Contact</a>
 		</div>
         <!--<div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
