added count of prices in stock table. modified navigation and content.

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -2,6 +2,7 @@
 
 <html lang="en">
     <head>
+		<meta name="robots" content="noindex">
         <meta charset="utf-8">
         <?php echo $this->headTitle('ZF2 '. $this->translate('Skeleton Application'))->setSeparator(' - ')->setAutoEscape(false) ?>
 
@@ -21,7 +22,10 @@
     </head>
     <body>
 		<div id="topNavigation">
-			<a href="/">Home</a> | <a href="/stock">Stocks (mongodb)</a> | <a href="/album">Album tutorial (mysql)</a> | <a href="/stock/contact">Contact</a>
+			<a href="/">Home</a> |
+			<a href="/stock">Stocks (mongodb)</a> |
+			<a href="/album">Album tutorial (mysql)</a> |
+			<a href="/stock/github">Github</a>
 		</div>
         <!--<div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
