--- a/module/Stock/view/stock/stock/home.phtml
+++ b/module/Stock/view/stock/stock/home.phtml
@@ -1,11 +1,10 @@
-<h1>Welcome to my project: stocks</h1>
-
-<br/>
+<h1>Welcome to my zend framework / mongodb project: stocks</h1>
 
 <ul>
-	<li><a href="/album">Album tutorial (mysql driven)</a></li>
-	<li><a href="/stock/index">Stocks list (mongo db driven)</a></li>
-	<li><a href="/stock/easeljs">EaselJs (html 5 canvas)</a></li>
+	<li><a href="/">Home</a></li>
+	<li><a href="/stock">Stocks (mongodb)</a></li>
+	<li><a href="/album">Album tutorial (mysql)</a></li>
+	<li><a href="/stock/github">Github</a></li>
 </ul>
 
 <br/>
