--- a/module/Stock/view/stock/stock/index.phtml
+++ b/module/Stock/view/stock/stock/index.phtml
@@ -14,7 +14,7 @@
 <?php foreach ($stocks as $stock) : ?>
 
 <tr>
-    <td><?php echo $this->escapeHtml($stock->symbol);?></td>
+    <td><?php echo $this->escapeHtml($stock->symbol);?> (<?php echo $this->escapeHtml($stock->priceCount);?> prices)</td>
     <td>
 		<a href="<?php echo $this->url('stock', array('action'=>'edit', 'id' => $stock->id));?>">Edit</a> |
 		<a href="http://de.finance.yahoo.com/q?s=<?php echo $stock->getSymbol(); ?>" target="_blank">View yahoo details</a> |
