added first ajax request to load prices for chart.

--- a/module/Stock/view/stock/stock/easeljs.phtml
+++ b/module/Stock/view/stock/stock/easeljs.phtml
@@ -14,6 +14,7 @@
 
 <script>
 	var stock = new Object();
+	stock.id = '<?php echo $stock->getId(); ?>';
 	stock.symbol = '<?php echo $stock->getSymbol(); ?>';
 
 	var prices = new Array();
