--- a/module/Stock/view/stock/stock/easeljs.phtml
+++ b/module/Stock/view/stock/stock/easeljs.phtml
@@ -16,67 +16,5 @@
 	var stock = new Object();
 	stock.id = '<?php echo $stock->getId(); ?>';
 	stock.symbol = '<?php echo $stock->getSymbol(); ?>';
-
-	var prices = new Array();
-
-	<?php
-		$k = 0;
-		while ($price = $prices->getNext()):
-	?>
-
-		prices[<?php echo $k; ?>] = new Object();
-		prices[<?php echo $k; ?>]['date'] = '<?php echo $price->getDate(); ?>';
-		prices[<?php echo $k; ?>]['open'] = <?php echo $price->getOpen(); ?>;
-		prices[<?php echo $k; ?>]['high'] = <?php echo $price->getHigh(); ?>;
-		prices[<?php echo $k; ?>]['low'] = <?php echo $price->getLow(); ?>;
-		prices[<?php echo $k; ?>]['close'] = <?php echo $price->getClose(); ?>;
-
-	<?php
-			$k++;
-		endwhile;
-	?>
-
-	/*prices[0] = new Object();
-	prices[0]['date'] = '2013-05-29';
-	prices[0]['open'] = 75.00;
-	prices[0]['high'] = 110.00;
-	prices[0]['low'] = 57.43;
-	prices[0]['close'] = 95.00;
-
-	prices[1] = new Object();
-	prices[1]['date'] = '2013-05-28';
-	prices[1]['open'] = 80.00;
-	prices[1]['high'] = 85.00;
-	prices[1]['low'] = 65.00;
-	prices[1]['close'] = 75.00;
-
-	prices[2] = new Object();
-	prices[2]['date'] = '2013-05-27';
-	prices[2]['open'] = 110.00;
-	prices[2]['high'] = 110.00;
-	prices[2]['low'] = 80.00;
-	prices[2]['close'] = 80.00;
-
-	prices[3] = new Object();
-	prices[3]['date'] = '2013-05-24';
-	prices[3]['open'] = 115.00;
-	prices[3]['high'] = 120.00;
-	prices[3]['low'] = 95.00;
-	prices[3]['close'] = 115.00;
-
-	prices[4] = new Object();
-	prices[4]['date'] = '2013-05-24';
-	prices[4]['open'] = 90.00;
-	prices[4]['high'] = 123.17;
-	prices[4]['low'] = 75.00;
-	prices[4]['close'] = 110.00;
-
-	prices[5] = new Object();
-	prices[5]['date'] = '2013-05-23';
-	prices[5]['open'] = 80.00;
-	prices[5]['high'] = 95.00;
-	prices[5]['low'] = 65.00;
-	prices[5]['close'] = 90.00;*/
-
-	init(stock, prices);
+	init();
 </script>
